<resources>
    <string name="app_name">AndroidFinalProject</string>
    <string name="costume_name">Costume Name</string>
    <string name="price">Rp. Price</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="size">size</string>
    <string name="size_label">Size</string>
    <string name="spec_title">Costume Details</string>
    <string name="source">Source</string>
    <string name="pieces">Costume Piece(s)</string>
    <string name="description_title">Character Description</string>
    <string name="price_tag">Price (in IDR)</string>
    <string name="company_name">Macaron Cosrent</string>
    <string name="toolbar_main">Macaron\'s Costume Catalog</string>
    <string name="nama">Muhammad Dimas Adijanto</string>
    <string name="email">email</string>
    <string name="action_share">Share</string>
</resources>