<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.AndroidFinalProject"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/toolbar_title"
                    style="@style/Text.Two"
                    android:layout_centerVertical="true"
                    android:text="@string/toolbar_main"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/costume_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars"/>

        <TextView
            style="@style/Text.One"
            android:id="@+id/costume_name"
            android:layout_gravity="bottom"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            tools:text="@string/costume_name"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/price_tag"
            android:textSize="14sp"/>

        <TextView
            style="@style/Text.One"
            android:id="@+id/costume_price"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="12dp"
            tools:text="@string/price"
            />

        <TextView
            style="@style/Text.Two"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/description_title"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            style="@style/Text.Content"
            android:id="@+id/costume_description"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            tools:text="@string/description"
            />

        <TextView
            style="@style/Text.Two"
            android:text="@string/spec_title"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    style="@style/Table.Content.Header"
                    android:text="@string/size_label"
                    />

                <TextView
                    android:id="@+id/costume_size"
                    style="@style/Table.Content.NoHead"
                    tools:text="@string/size" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    style="@style/Table.Content.Header"
                    android:text="@string/pieces"
                    />

                <TextView
                    android:id="@+id/costume_pieces"
                    style="@style/Table.Content.NoHead"
                    tools:text="@string/size" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    style="@style/Table.Content.Header"
                    android:text="@string/source"
                    />

                <TextView
                    android:id="@+id/costume_source"
                    style="@style/Table.Content.NoHead"
                    tools:text="@string/size" />

            </TableRow>

        </TableLayout>

        <Button
            style="@style/Button"
            android:id="@+id/action_share"
            android:text="@string/action_share"
            />

    </LinearLayout>

</ScrollView>