<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        tools:src="@tools:sample/avatars"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            style="@style/Text.Two"
            android:id="@+id/costume_name"
            android:layout_marginBottom="4dp"
            tools:text="@string/costume_name"
            />

            <TextView
                    style="@style/Text.Three"
                    android:id="@+id/price"
                    android:layout_weight="7"
                    tools:text="@string/price"
                />


        <TextView
            android:id="@+id/description"
            style="@style/Text.Three"
            android:layout_below="@id/price"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/description"
            />

    </LinearLayout>

</LinearLayout>